订单列表,订单详细,取消订单

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,10 @@ spring:
     password: root
   jpa:
     show-sql: true
+  jackson:
+    default-property-inclusion: non_null
 logging:
   pattern:
     console: "%d - %msg%n"
   file: /var/log/sell.log
+
